# lazyfile

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.claude/rules/: async-patterns.md  code-style.md  dependencies.md  documentation.md  error-handling.md  git-commits.md  lints.md  module-organization.md  observability.md  patterns.md  security.md  testing.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  error.rs  launcher.rs  lib.rs  main.rs
src/app/: handler.rs  mod.rs  state.rs
src/app/handler/: file_ops.rs  mod.rs  navigation.rs  remote_modal.rs
src/auth/: credentials.rs  manager.rs  mod.rs
src/rclone/: client.rs  commands.rs  mod.rs  types.rs  validate.rs
src/ui/: layout.rs  mod.rs
src/ui/widgets/: confirm_modal.rs  create_remote.rs  file_list.rs  file_operations_modal.rs  help.rs  login_modal.rs  mod.rs  remote_list.rs  status_bar.rs
tests/: flow_tests.rs  rclone_tests.rs
tests/common/: mod.rs
tests/flows/: file_operations.rs  mod.rs  modals.rs  navigation.rs
tests/rclone/: copy_move.rs  directory_ops.rs  edge_cases.rs  file_deletion.rs  file_listing.rs  mod.rs  remote_management.rs  sync.rs
