[package]
name = "lazyfile"
version = "0.1.1"
edition = "2024"
authors = ["Erick Jesus <erick.jesus2060@gmail.com>"]
description = "A simple terminal UI for browsing and interacting with cloud storage via rclone"
license = "MIT"
repository = "https://github.com/ErickJ3/lazyfile"
homepage = "https://github.com/ErickJ3/lazyfile"
readme = "README.md"
keywords = ["rclone", "tui", "cloud-storage", "terminal"]
categories = ["command-line-utilities"]
publish = false
rust-version = "1.86"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.53", features=["derive"] }
